[gd_scene load_steps=6 format=3 uid="uid://bhaxjhwjx16pg"]

[ext_resource type="FontFile" uid="uid://nqjewwk4e1lx" path="res://Assets/Fonts/pixel.ttf" id="1_38aua"]
[ext_resource type="Script" uid="uid://cews1iye744ij" path="res://Scripts/main_menu.gd" id="1_pha2q"]
[ext_resource type="Texture2D" uid="uid://cqplp7fl7u0tn" path="res://Assets/Scenario/BG - Close.png" id="4_5wi6m"]
[ext_resource type="Texture2D" uid="uid://cdh11nup0wnii" path="res://Assets/Scenario/BG - Medium.png" id="5_chkef"]
[ext_resource type="Texture2D" uid="uid://bdbi7t5y1ngwq" path="res://Assets/UI/Button_White.png" id="6_chkef"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pha2q")

[node name="BG-CLOSE" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 240.0
offset_bottom = 170.0
texture = ExtResource("4_5wi6m")

[node name="BG-MID" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 240.0
offset_bottom = 170.0
texture = ExtResource("5_chkef")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -64.0
offset_right = 90.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/icon_hover_color = Color(0.109804, 0.490196, 0.207843, 1)
theme_override_colors/icon_pressed_color = Color(0.0901961, 0.313726, 0.298039, 1)
theme_override_colors/icon_normal_color = Color(0.333333, 0.666667, 0.266667, 1)
theme_override_fonts/font = ExtResource("1_38aua")
theme_override_font_sizes/font_size = 10
icon = ExtResource("6_chkef")
flat = true

[node name="Label" type="Label" parent="VBoxContainer/StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -14.0
offset_right = 39.5
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_38aua")
theme_override_font_sizes/font_size = 10
text = "start game"
horizontal_alignment = 1

[node name="PlacarButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/icon_hover_color = Color(0.111623, 0.488594, 0.207074, 1)
theme_override_colors/icon_pressed_color = Color(0.0901961, 0.313726, 0.298039, 1)
theme_override_colors/icon_normal_color = Color(0.333333, 0.666667, 0.266667, 1)
theme_override_fonts/font = ExtResource("1_38aua")
theme_override_font_sizes/font_size = 10
text = "
"
icon = ExtResource("6_chkef")
flat = true

[node name="Label" type="Label" parent="VBoxContainer/PlacarButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -15.0
offset_right = 42.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_38aua")
theme_override_font_sizes/font_size = 10
text = "leaderboard"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/icon_hover_color = Color(0.109804, 0.490196, 0.207843, 1)
theme_override_colors/icon_pressed_color = Color(0.0888731, 0.313812, 0.296562, 1)
theme_override_colors/icon_normal_color = Color(0.333333, 0.666667, 0.266667, 1)
theme_override_fonts/font = ExtResource("1_38aua")
theme_override_font_sizes/font_size = 10
icon = ExtResource("6_chkef")
flat = true

[node name="Label" type="Label" parent="VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_38aua")
theme_override_font_sizes/font_size = 10
text = "exit"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PlacarButton" to="." method="_on_button_placar_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
